css/style.css
* {
  box-sizing: border-box;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
html {
  font-size: 16px;
  font-family: Arial, Helvetica, sans-serif;
}
body {
  line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

p {
  text-align: justify;
  font-size: 1rem;
  padding-bottom: 0.5rem;
  line-height: 1.3;
}

h2 {
  font-weight: bold;
  font-size: 2rem;
  margin: 1rem 0;
  text-align: center;
}

h3 {
  font-weight: bold;
  font-size: 1.5rem;
  margin: 0.5rem 0;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 0.5rem 1rem;
}

img {
  display: block;
  width: 100%;
}

article {
  padding: 0 1.875rem;
}
.container {
  margin: 5rem auto;
  max-width: 1100px;
}

.cols-2 {
  display: flex;
  flex-wrap: wrap;
}

.cols-2 .col {
  flex: 0 0 50%;
  padding: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.col {
  position: relative;
}

.logo {
  flex: 1;
}

#logo {
  width: 140px;
}

nav {
  flex: 0 0 auto;
}

nav ul {
  display: flex;
  list-style: none;
  align-items: center;
  justify-content: center;
  position: relative;
}

nav ul li {
  padding: 1rem 1rem;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #fff;
  min-width: 200px;
  z-index: 1;
}

.dropdown-content a {
  text-decoration: none;
  font-size: 1rem;
  padding: 1rem;
  color: #3d3d3d;
  display: block;
}

.dropdown-content a:hover {
  background-color: rgba(198, 198, 198, 0.1);
}

.dropdown:hover .dropdown-content {
  display: block;
  top: 100%;
}

nav ul li a {
  text-decoration: none;
  font-weight: bold;
  font-size: 1.2rem;
  color: #3d3d3d;
}

#cart {
  flex: 1;
  text-align: right;
}

#showcase {
  background-color: rgba(0, 0, 0, 0.2);
  color: #fff;
  height: 900px;
  position: relative;
  margin-bottom: 5px;
}

#showcase:before {
  content: '';
  background: url('../images/barcos-mar.jpg') no-repeat center center/cover;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

#showcase .content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 100%;
  height: 100%;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
}

#showcase h1 {
  font-weight: bold;
  font-size: 4rem;
}

.container-md {
  margin: 0 auto;
  max-width: 960px;
}

.text-content {
  margin-bottom: 10rem;
}

div h3 {
  font-size: 1.5rem;
}

.btn {
  display: inline-block;
  border: 1px solid #333;
  background-color: rgba(255, 255, 255, 0.5);
  color: #333;
  padding: 0.75rem 1.5rem;
  margin-top: 1rem;
  text-decoration: none;
  transition: opacity 1s ease-in;
}

.btn:hover {
  opacity: 0.7;
}

a.collection__link:hover {
  opacity: 0.7;
}

#colecciones h3 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 2rem;
  color: #fff;
  padding: 0.5rem 2rem;
  border: 1px solid white;
}

#materiales {
  flex-direction: row-reverse;
}

#newsletter {
  display: flex;
  justify-content: center;
  line-height: 1.5;
}

#newsletter__form {
  width: 60%;
}

#newsletter h2 {
  font-weight: bold;
  font-size: 1.5rem;
  text-align: center;
}

#newsletter p {
  font-size: 1rem;
  text-align: center;
}

.form-group {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

input[type="email"] {
  border: 1px solid #333;
  padding: 0.625rem;
  margin-top: 0.3125rem;
  width: 100%;
  font-size: 1rem;
}

button[type="submit"] {
  background-color: #333;
  color: #fff;
  cursor: pointer;
  border: 0;
  padding: 0.625rem 1.75rem;
  margin-top: 0.3125rem;
  text-transform: uppercase;
  font-size: 1rem;
}

footer {
  display: flex;
  flex-direction: column;
  color: #aaa;
  line-height: 1.5;
}

footer h3 {
  padding: 0 1.875rem;
}

footer ul {
  padding: 0.5rem 1.875rem;
}

footer a {
  text-decoration: none;
  color: #555;
}

.footer__links {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
}

#social__links {
  display: flex;
  align-items: center;
  justify-content: start;
}

#social__links li {
  margin-left: 0.75rem;
}

#social__links li:first-child {
  margin-left: 0;
}

#payment__methods {
  display: flex;
  align-items: center;
  justify-content: start;
}

#payment__methods li {
  margin-left: 0.5rem;
}

#payment__methods li:first-child {
  margin-left: 0;
}

.copyright {
  text-align: center;
  padding: 0.9375rem 1.875rem;
  background-color: #fff
}

.image__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 5rem;
}

.image_header {
  margin-bottom: 5rem;
}

.image__header img {
  width: 32%;
}

.image-container {
  overflow: hidden;
  margin: 0 auto;
  max-width: 1100px;
}

.grid {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  flex-direction: row;
}

.cell {
  width: calc((100% / 3) - 2rem);
}

.responsive-image {
	max-width: 100%;
}

.cell img {
	display: block;
}

.image-description {
	padding: 0.5rem 0;
  text-align: center;
  font-size: 1.2rem;
}

.image-price {
	padding: 0.5rem 0;
	text-align: center;	
}

.care {
  list-style-type: circle;
}

ul.care li {
  padding: 0.4rem 0;
} 

@media (max-width: 480px) {
  header {
    flex-direction: column;
  }

  .cols-2 {
    display: block;
  }

  .cell {
    width: 100%;
  }
}

@media (min-width: 481px) and (max-width: 900px) {
  header {
    flex-direction: column;
  }

  .cols-2 {
    display: block;
  }

  .cell {
    width: calc((100% / 2) - 1rem);
  }
}

